WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182513
Release assertion in inlineVideoFrame
https://bugs.webkit.org/show_bug.cgi?id=182513
Summary
Release assertion in inlineVideoFrame
Ryosuke Niwa
Reported
2018-02-05 15:04:54 PST
We're still hitting release assertions in inlineVideoFrame e.g. Thread 0 Crashed: 0 WebCore 0x0000000101e6c394 WebCore::Document::updateLayout() + 112 1 WebCore 0x0000000101e6c390 WebCore::Document::updateLayout() + 108 2 WebCore 0x00000001029d2908 WebCore::Document::updateLayoutIgnorePendingStylesheets(WebCore::Document::RunPostLayoutTasks) + 108 3 WebKit 0x0000000100427268 WebKit::inlineVideoFrame(WebCore::HTMLVideoElement&) + 56 4 WebKit 0x0000000100426d28 WebKit::VideoFullscreenManager::enterVideoFullscreenForVideoElement(WebCore::HTMLVideoElement&, unsigned int, bool) + 216 5 WebCore 0x0000000102b7889c WebCore::HTMLMediaElement::enterFullscreen(unsigned int) + 408 6 WebCore 0x0000000102b667fc WebCore::HTMLMediaElement::updatePlayState(WebCore::HTMLMediaElement::UpdateState) + 424 7 WebCore 0x0000000102b71108 WebCore::HTMLMediaElement::playInternal() + 1100 8 WebCore 0x0000000102b7122c WebCore::HTMLMediaElement::play() + 268 9 WebCore 0x0000000102b7c5f8 non-virtual thunk to WebCore::HTMLMediaElement::mayResumePlayback(bool) + 192 10 WebCore 0x0000000102b77cb4 WebCore::HTMLMediaElement::visibilityStateChanged() + 376 11 WebCore 0x0000000102b7d2c4 WebCore::HTMLMediaElement::fullscreenModeChanged(unsigned int) + 52 12 WebCore 0x0000000102b64ff0 WebCore::HTMLMediaElement::exitFullscreen() + 188 13 WebCore 0x0000000102b7729c WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer() + 124 14 WebCore 0x0000000102b776c0 WebCore::HTMLMediaElement::stop() + 128 15 WebCore 0x0000000101e2f030 WebCore::ScriptExecutionContext::stopActiveDOMObjects() + 272
Attachments
Fixes the bug
(7.86 KB, patch)
2018-02-05 15:30 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2018-02-05 15:05:04 PST
<
rdar://problem/37159363
>
Ryosuke Niwa
Comment 2
2018-02-05 15:30:01 PST
Created
attachment 333127
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2018-02-05 16:56:50 PST
Waiting for iOS & 32-bit macOS.
WebKit Commit Bot
Comment 4
2018-02-05 21:00:11 PST
Comment on
attachment 333127
[details]
Fixes the bug Clearing flags on attachment: 333127 Committed
r228151
: <
https://trac.webkit.org/changeset/228151
>
WebKit Commit Bot
Comment 5
2018-02-05 21:00:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug